[project]
name = "gemini-grounding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fake-useragent>=2.2.0",
    "requests>=2.32.5",
    "mcp>=1.0.0",
    "cachetools>=7.0.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
